Add new solution with CNN

--- a/titanic/titanic-cnn.ipynb
+++ b/titanic/titanic-cnn.ipynb
@@ -132,30 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# X = tf.placeholder('float32', [None, train_df.shape[1] - 1])\n",
-    "# Y = tf.placeholder('float32', [None, 2])\n",
-    "\n",
-    "# W1 = tf.Variable(tf.zeros([8, 100]))\n",
-    "# b1 = tf.Variable(tf.zeros([100]))\n",
-    "\n",
-    "# layer1 = tf.nn.sigmoid(tf.matmul(X, W1) + b1)\n",
-    "# layer1 = tf.nn.dropout(layer1, 0.9)\n",
-    "\n",
-    "# W2 = tf.Variable(tf.zeros([100, 2]))\n",
-    "# b2 = tf.Variable(tf.zeros([2]))\n",
-    "\n",
-    "# hypothesis = tf.nn.softmax(tf.matmul(layer1, W2))\n",
-    "\n",
-    "# cost = tf.reduce_mean(-tf.reduce_sum(Y * tf.log(hypothesis + 1e-10), reduction_indices=1))\n",
-    "# optimizer = tf.train.AdamOptimizer(0.001).minimize(cost)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "_uuid": "cbded58ed5e85510dc31dd204cf2272544430f25"
    },
@@ -171,27 +147,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = nan\n",
-      "Epoch: 0002 cost = nan\n",
-      "Epoch: 0003 cost = nan\n",
-      "Epoch: 0004 cost = nan\n",
-      "Epoch: 0005 cost = nan\n",
-      "Epoch: 0006 cost = nan\n",
-      "Epoch: 0007 cost = nan\n",
-      "Epoch: 0008 cost = nan\n",
-      "Epoch: 0009 cost = nan\n",
-      "Epoch: 0010 cost = nan\n",
-      "Epoch: 0011 cost = nan\n",
-      "Epoch: 0012 cost = nan\n",
-      "Epoch: 0013 cost = nan\n",
-      "Epoch: 0014 cost = nan\n",
-      "Epoch: 0015 cost = nan\n",
-      "Epoch: 0016 cost = nan\n",
-      "Epoch: 0017 cost = nan\n",
-      "Epoch: 0018 cost = nan\n",
-      "Epoch: 0019 cost = nan\n",
-      "Epoch: 0020 cost = nan\n",
-      "Epoch: 0021 cost = nan\n"
+      "Epoch: 0001 cost = 0.603250706\n",
+      "Epoch: 0002 cost = 0.501237480\n",
+      "Epoch: 0003 cost = 0.443857658\n",
+      "Epoch: 0004 cost = 0.442735936\n",
+      "Epoch: 0005 cost = 0.411601383\n",
+      "Epoch: 0006 cost = 0.410644464\n",
+      "Epoch: 0007 cost = 0.388074892\n",
+      "Epoch: 0008 cost = 0.410872310\n",
+      "Epoch: 0009 cost = 0.398013740\n",
+      "Epoch: 0010 cost = 0.377872762\n",
+      "Epoch: 0011 cost = 0.382161790\n",
+      "Epoch: 0012 cost = 0.377055575\n",
+      "Epoch: 0013 cost = 0.381564520\n",
+      "Epoch: 0014 cost = 0.378272261\n",
+      "Epoch: 0015 cost = 0.385138526\n",
+      "Epoch: 0016 cost = 0.376472894\n",
+      "Epoch: 0017 cost = 0.369250470\n",
+      "Epoch: 0018 cost = 0.382431559\n",
+      "Epoch: 0019 cost = 0.369130192\n",
+      "Epoch: 0020 cost = 0.380826934\n",
+      "Epoch: 0021 cost = 0.373642359\n",
+      "Epoch: 0022 cost = 0.363722053\n",
+      "Epoch: 0023 cost = 0.373648473\n",
+      "Epoch: 0024 cost = 0.372212067\n",
+      "Epoch: 0025 cost = 0.375910466\n",
+      "Epoch: 0026 cost = 0.370814288\n",
+      "Epoch: 0027 cost = 0.363812254\n",
+      "Epoch: 0028 cost = 0.355453513\n",
+      "Epoch: 0029 cost = 0.375562041\n",
+      "Epoch: 0030 cost = 0.374713204\n",
+      "Epoch: 0031 cost = 0.354504902\n",
+      "Epoch: 0032 cost = 0.360932247\n",
+      "Epoch: 0033 cost = 0.359278889\n",
+      "Epoch: 0034 cost = 0.352775236\n",
+      "Epoch: 0035 cost = 0.345654776\n",
+      "Epoch: 0036 cost = 0.355667537\n",
+      "Epoch: 0037 cost = 0.347611977\n",
+      "Epoch: 0038 cost = 0.363468561\n",
+      "Epoch: 0039 cost = 0.355891998\n",
+      "Epoch: 0040 cost = 0.366966766\n",
+      "Epoch: 0041 cost = 0.356762332\n",
+      "Epoch: 0042 cost = 0.353922425\n",
+      "Epoch: 0043 cost = 0.341430936\n",
+      "Epoch: 0044 cost = 0.352168548\n",
+      "Epoch: 0045 cost = 0.340045661\n",
+      "Epoch: 0046 cost = 0.351209006\n",
+      "Epoch: 0047 cost = 0.337163334\n",
+      "Epoch: 0048 cost = 0.344090759\n",
+      "Epoch: 0049 cost = 0.339583629\n",
+      "Epoch: 0050 cost = 0.351040782\n",
+      "Epoch: 0051 cost = 0.360790599\n",
+      "Epoch: 0052 cost = 0.344846343\n",
+      "Epoch: 0053 cost = 0.341993209\n",
+      "Epoch: 0054 cost = 0.324457469\n",
+      "Epoch: 0055 cost = 0.344708184\n",
+      "Epoch: 0056 cost = 0.340264692\n",
+      "Epoch: 0057 cost = 0.332240072\n",
+      "Epoch: 0058 cost = 0.336412782\n",
+      "Epoch: 0059 cost = 0.334599262\n",
+      "Epoch: 0060 cost = 0.336825496\n",
+      "Epoch: 0061 cost = 0.348375163\n",
+      "Epoch: 0062 cost = 0.324715481\n",
+      "Epoch: 0063 cost = 0.340474574\n",
+      "Epoch: 0064 cost = 0.324732029\n",
+      "Epoch: 0065 cost = 0.329122253\n",
+      "Epoch: 0066 cost = 0.335708245\n",
+      "Epoch: 0067 cost = 0.327558447\n",
+      "Epoch: 0068 cost = 0.331408030\n",
+      "Epoch: 0069 cost = 0.316830875\n",
+      "Epoch: 0070 cost = 0.325299492\n",
+      "Epoch: 0071 cost = 0.323433324\n",
+      "Epoch: 0072 cost = 0.327143620\n",
+      "Epoch: 0073 cost = 0.332935138\n",
+      "Epoch: 0074 cost = 0.331304954\n",
+      "Epoch: 0075 cost = 0.315390203\n",
+      "Epoch: 0076 cost = 0.332965511\n",
+      "Epoch: 0077 cost = 0.327865506\n",
+      "Epoch: 0078 cost = 0.320392527\n",
+      "Epoch: 0079 cost = 0.328479681\n",
+      "Epoch: 0080 cost = 0.326867094\n",
+      "Epoch: 0081 cost = 0.318587117\n",
+      "Epoch: 0082 cost = 0.323786384\n",
+      "Epoch: 0083 cost = 0.323588846\n",
+      "Epoch: 0084 cost = 0.316698550\n",
+      "Epoch: 0085 cost = 0.330820566\n",
+      "Epoch: 0086 cost = 0.303829535\n",
+      "Epoch: 0087 cost = 0.323284199\n",
+      "Epoch: 0088 cost = 0.321492464\n",
+      "Epoch: 0089 cost = 0.323270382\n",
+      "Epoch: 0090 cost = 0.314252114\n",
+      "Epoch: 0091 cost = 0.309397888\n",
+      "Epoch: 0092 cost = 0.307626723\n",
+      "Epoch: 0093 cost = 0.310683514\n",
+      "Epoch: 0094 cost = 0.315626861\n",
+      "Epoch: 0095 cost = 0.305394756\n",
+      "Epoch: 0096 cost = 0.313079468\n",
+      "Epoch: 0097 cost = 0.314539253\n",
+      "Epoch: 0098 cost = 0.300298104\n",
+      "Epoch: 0099 cost = 0.313095629\n",
+      "Epoch: 0100 cost = 0.311360641\n",
+      "Leaning finished\n"
      ]
     }
    ],
@@ -201,7 +257,7 @@
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
     "training_epochs = 100\n",
-    "total_batch = 1000\n",
+    "total_batch = 100\n",
     "\n",
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0    \n",
@@ -217,12 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "_uuid": "bb085cee231c9bfbe639b5795a27ab2c9342ba69"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-6-3f6ee6e48463>:4: calling argmax (from tensorflow.python.ops.math_ops) with dimension is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the `axis` argument instead\n"
+     ]
+    }
+   ],
    "source": [
+    "test_df = test_df[['Pclass', 'Sex', 'Age', 'Age', 'SibSp', 'Parch', 'Fare', 'Cabin', 'Embarked']]\n",
+    "\n",
     "prediction = sess.run(hypothesis, feed_dict={X:test_df})\n",
     "refined_prediction = sess.run(tf.argmax(prediction, dimension=1))\n",
     "\n",
