--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -98,9 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "_uuid": "6f1d969b768547dbe11cc6e4e75a76bf8739cf90"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = tf.placeholder('float32', [None, train_df.shape[1] - 1])\n",
@@ -123,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "_uuid": "cbded58ed5e85510dc31dd204cf2272544430f25"
    },
@@ -139,92 +137,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = 0.522682041\n",
-      "Epoch: 0002 cost = 0.449720219\n",
-      "Epoch: 0003 cost = 0.442074337\n",
-      "Epoch: 0004 cost = 0.445371914\n",
-      "Epoch: 0005 cost = 0.448109151\n",
-      "Epoch: 0006 cost = 0.441977623\n",
-      "Epoch: 0007 cost = 0.442074054\n",
-      "Epoch: 0008 cost = 0.442408912\n",
-      "Epoch: 0009 cost = 0.441363881\n",
-      "Epoch: 0010 cost = 0.437515928\n",
-      "Epoch: 0011 cost = 0.437034754\n",
-      "Epoch: 0012 cost = 0.439750744\n",
-      "Epoch: 0013 cost = 0.438458265\n",
-      "Epoch: 0014 cost = 0.440811771\n",
-      "Epoch: 0015 cost = 0.442097856\n",
-      "Epoch: 0016 cost = 0.436025079\n",
-      "Epoch: 0017 cost = 0.433964825\n",
-      "Epoch: 0018 cost = 0.427521485\n",
-      "Epoch: 0019 cost = 0.430551097\n",
-      "Epoch: 0020 cost = 0.436686423\n",
-      "Epoch: 0021 cost = 0.424972649\n",
-      "Epoch: 0022 cost = 0.428197246\n",
-      "Epoch: 0023 cost = 0.426457058\n",
-      "Epoch: 0024 cost = 0.426574454\n",
-      "Epoch: 0025 cost = 0.425887495\n",
-      "Epoch: 0026 cost = 0.426197299\n",
-      "Epoch: 0027 cost = 0.421682808\n",
-      "Epoch: 0028 cost = 0.421507342\n",
-      "Epoch: 0029 cost = 0.419130765\n",
-      "Epoch: 0030 cost = 0.420159399\n",
-      "Epoch: 0031 cost = 0.425410096\n",
-      "Epoch: 0032 cost = 0.424044408\n",
-      "Epoch: 0033 cost = 0.415459810\n",
-      "Epoch: 0034 cost = 0.418311762\n",
-      "Epoch: 0035 cost = 0.416336670\n",
-      "Epoch: 0036 cost = 0.414437937\n",
-      "Epoch: 0037 cost = 0.416527978\n",
-      "Epoch: 0038 cost = 0.413221414\n",
-      "Epoch: 0039 cost = 0.410017439\n",
-      "Epoch: 0040 cost = 0.412654172\n",
-      "Epoch: 0041 cost = 0.412314688\n",
-      "Epoch: 0042 cost = 0.417284652\n",
-      "Epoch: 0043 cost = 0.409438341\n",
-      "Epoch: 0044 cost = 0.409950152\n",
-      "Epoch: 0045 cost = 0.411292983\n",
-      "Epoch: 0046 cost = 0.409249752\n",
-      "Epoch: 0047 cost = 0.415165491\n",
-      "Epoch: 0048 cost = 0.406978723\n",
-      "Epoch: 0049 cost = 0.411637989\n",
-      "Epoch: 0050 cost = 0.410165621\n",
-      "Epoch: 0051 cost = 0.405222468\n",
-      "Epoch: 0052 cost = 0.407579012\n",
-      "Epoch: 0053 cost = 0.404251780\n",
-      "Epoch: 0054 cost = 0.402404300\n",
-      "Epoch: 0055 cost = 0.405397611\n",
-      "Epoch: 0056 cost = 0.405354277\n",
-      "Epoch: 0057 cost = 0.399387769\n",
-      "Epoch: 0058 cost = 0.398320389\n",
-      "Epoch: 0059 cost = 0.399405872\n",
-      "Epoch: 0060 cost = 0.398275317\n",
-      "Epoch: 0061 cost = 0.397935409\n",
-      "Epoch: 0062 cost = 0.403507970\n",
-      "Epoch: 0063 cost = 0.398944181\n",
-      "Epoch: 0064 cost = 0.397922658\n",
-      "Epoch: 0065 cost = 0.398850532\n",
-      "Epoch: 0066 cost = 0.396356681\n",
-      "Epoch: 0067 cost = 0.396335512\n",
-      "Epoch: 0068 cost = 0.396862444\n",
-      "Epoch: 0069 cost = 0.395191643\n",
-      "Epoch: 0070 cost = 0.394948216\n",
-      "Epoch: 0071 cost = 0.395295368\n",
-      "Epoch: 0072 cost = 0.391249577\n",
-      "Epoch: 0073 cost = 0.393871553\n",
-      "Epoch: 0074 cost = 0.395622821\n",
-      "Epoch: 0075 cost = 0.387746110\n",
-      "Epoch: 0076 cost = 0.392948859\n",
-      "Epoch: 0077 cost = 0.393061564\n",
-      "Epoch: 0078 cost = 0.395454357\n",
-      "Epoch: 0079 cost = 0.393618474\n",
-      "Epoch: 0080 cost = 0.393971571\n",
-      "Epoch: 0081 cost = 0.388894814\n",
-      "Epoch: 0082 cost = 0.385531354\n",
-      "Epoch: 0083 cost = 0.389266297\n",
-      "Epoch: 0084 cost = 0.386349266\n",
-      "Epoch: 0085 cost = 0.389148802\n",
-      "Epoch: 0086 cost = 0.384475866\n"
+      "Epoch: 0001 cost = 0.666044075\n",
+      "Epoch: 0002 cost = 0.659125881\n",
+      "Epoch: 0003 cost = 0.630030705\n",
+      "Epoch: 0004 cost = 0.549119245\n",
+      "Epoch: 0005 cost = 0.494032066\n",
+      "Epoch: 0006 cost = 0.464893915\n",
+      "Epoch: 0007 cost = 0.459366334\n",
+      "Epoch: 0008 cost = 0.442951286\n",
+      "Epoch: 0009 cost = 0.449523885\n",
+      "Epoch: 0010 cost = 0.443674448\n",
+      "Epoch: 0011 cost = 0.435542387\n",
+      "Epoch: 0012 cost = 0.457753942\n",
+      "Epoch: 0013 cost = 0.441554425\n",
+      "Epoch: 0014 cost = 0.450615861\n",
+      "Epoch: 0015 cost = 0.457382766\n",
+      "Epoch: 0016 cost = 0.442442662\n",
+      "Epoch: 0017 cost = 0.438891343\n",
+      "Epoch: 0018 cost = 0.442781153\n",
+      "Epoch: 0019 cost = 0.439981462\n",
+      "Epoch: 0020 cost = 0.444302201\n",
+      "Epoch: 0021 cost = 0.431644592\n",
+      "Epoch: 0022 cost = 0.439669166\n",
+      "Epoch: 0023 cost = 0.441373792\n",
+      "Epoch: 0024 cost = 0.450630963\n",
+      "Epoch: 0025 cost = 0.455151668\n",
+      "Epoch: 0026 cost = 0.446380751\n",
+      "Epoch: 0027 cost = 0.417786954\n",
+      "Epoch: 0028 cost = 0.438400355\n",
+      "Epoch: 0029 cost = 0.446547982\n",
+      "Epoch: 0030 cost = 0.436564835\n",
+      "Epoch: 0031 cost = 0.447862744\n",
+      "Epoch: 0032 cost = 0.460983081\n",
+      "Epoch: 0033 cost = 0.444777634\n",
+      "Epoch: 0034 cost = 0.448108335\n",
+      "Epoch: 0035 cost = 0.457257704\n",
+      "Epoch: 0036 cost = 0.441119028\n",
+      "Epoch: 0037 cost = 0.450115548\n",
+      "Epoch: 0038 cost = 0.447217178\n",
+      "Epoch: 0039 cost = 0.438371390\n",
+      "Epoch: 0040 cost = 0.444136406\n",
+      "Epoch: 0041 cost = 0.442311268\n",
+      "Epoch: 0042 cost = 0.435242893\n",
+      "Epoch: 0043 cost = 0.442271502\n",
+      "Epoch: 0044 cost = 0.442031696\n",
+      "Epoch: 0045 cost = 0.452206677\n",
+      "Epoch: 0046 cost = 0.450953920\n",
+      "Epoch: 0047 cost = 0.442554400\n",
+      "Epoch: 0048 cost = 0.456124974\n",
+      "Epoch: 0049 cost = 0.436281799\n",
+      "Epoch: 0050 cost = 0.442675338\n",
+      "Epoch: 0051 cost = 0.449596610\n",
+      "Epoch: 0052 cost = 0.441153596\n",
+      "Epoch: 0053 cost = 0.444106098\n",
+      "Epoch: 0054 cost = 0.444144886\n",
+      "Epoch: 0055 cost = 0.439751855\n",
+      "Epoch: 0056 cost = 0.439945898\n",
+      "Epoch: 0057 cost = 0.427119094\n",
+      "Epoch: 0058 cost = 0.447451699\n",
+      "Epoch: 0059 cost = 0.454172759\n",
+      "Epoch: 0060 cost = 0.429335187\n",
+      "Epoch: 0061 cost = 0.455387766\n",
+      "Epoch: 0062 cost = 0.445644349\n",
+      "Epoch: 0063 cost = 0.451798722\n",
+      "Epoch: 0064 cost = 0.449067548\n",
+      "Epoch: 0065 cost = 0.438460939\n",
+      "Epoch: 0066 cost = 0.430653782\n",
+      "Epoch: 0067 cost = 0.436068043\n",
+      "Epoch: 0068 cost = 0.438572262\n",
+      "Epoch: 0069 cost = 0.443087180\n",
+      "Epoch: 0070 cost = 0.424512007\n",
+      "Epoch: 0071 cost = 0.447393150\n",
+      "Epoch: 0072 cost = 0.438626107\n",
+      "Epoch: 0073 cost = 0.438857703\n",
+      "Epoch: 0074 cost = 0.436870840\n",
+      "Epoch: 0075 cost = 0.443688129\n",
+      "Epoch: 0076 cost = 0.445221281\n",
+      "Epoch: 0077 cost = 0.427363208\n",
+      "Epoch: 0078 cost = 0.432909846\n",
+      "Epoch: 0079 cost = 0.444255518\n",
+      "Epoch: 0080 cost = 0.443873236\n",
+      "Epoch: 0081 cost = 0.441117613\n",
+      "Epoch: 0082 cost = 0.447734826\n",
+      "Epoch: 0083 cost = 0.447350751\n",
+      "Epoch: 0084 cost = 0.434879897\n",
+      "Epoch: 0085 cost = 0.440816434\n",
+      "Epoch: 0086 cost = 0.440336512\n",
+      "Epoch: 0087 cost = 0.426149170\n",
+      "Epoch: 0088 cost = 0.442854022\n",
+      "Epoch: 0089 cost = 0.442662510\n",
+      "Epoch: 0090 cost = 0.452038409\n",
+      "Epoch: 0091 cost = 0.450056402\n",
+      "Epoch: 0092 cost = 0.442233997\n",
+      "Epoch: 0093 cost = 0.440176841\n",
+      "Epoch: 0094 cost = 0.455375420\n",
+      "Epoch: 0095 cost = 0.451961124\n",
+      "Epoch: 0096 cost = 0.432135634\n",
+      "Epoch: 0097 cost = 0.421195725\n",
+      "Epoch: 0098 cost = 0.431079885\n",
+      "Epoch: 0099 cost = 0.424535930\n",
+      "Epoch: 0100 cost = 0.437184522\n",
+      "Leaning finished\n"
      ]
     }
    ],
@@ -234,7 +247,7 @@
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
     "training_epochs = 100\n",
-    "total_batch = 1000\n",
+    "total_batch = 100\n",
     "\n",
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0    \n",
@@ -250,12 +263,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "_uuid": "bb085cee231c9bfbe639b5795a27ab2c9342ba69"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-6-c1b30a894cb8>:4: calling argmax (from tensorflow.python.ops.math_ops) with dimension is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use the `axis` argument instead\n"
+     ]
+    }
+   ],
    "source": [
+    "test_df = test_df[['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Cabin', 'Embarked']]\n",
+    "\n",
     "prediction = sess.run(hypothesis, feed_dict={X:test_df})\n",
     "refined_prediction = sess.run(tf.argmax(prediction, dimension=1))\n",
     "\n",
